--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" href="favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Todo-list App</title>
+    <style type="text/css"></style>
+  </head>
+  <body>
+    <div class="container">
+      <div style="justify-content: space-around" class="row">
+        <div class="col-12 col-md-7">
+          <h1
+            style="font-style: normal; font-size: 46px"
+            class="text-center mb-4 mt-3"
+          >
+            <i class="fas fa-book-open text-primary"></i> My
+            <span class="text-primary">Todo</span>List
+          </h1>
+          <div id="actions" class="row mb-2 mt-2 ml-2 mr-2"></div>
+
+          <div class="form-group">
+            <label for="Title"><h3>Titulo:</h3> </label>
+            <input
+              class="form-control"
+              type="text"
+              id="Title"
+              placeholder="Informe um Titulo"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="Description"><h3>Descrição:</h3> </label>
+            <input
+              class="form-control"
+              type="text"
+              id="Description"
+              placeholder="Informe uma Descrição"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="Date"><h3>Data:</h3> </label>
+            <input
+              class="form-control"
+              type="text"
+              id="Date"
+              placeholder="Informe uma Data"
+            />
+          </div>
+
+          <button id="save_btn" class="btn btn-primary btn-block mb-3">
+            Salvar
+          </button>
+
+          <div class="table-responsive">
+            <table id="table" class="table table-striped table-hover">
+              <tr class="bg-dark text-white">
+                <th>Titulo</th>
+                <th>Descrição</th>
+                <th>Data</th>
+                <th>Excluir</th>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="./assets/script.js"></script>
+  </body>
 </html>
